update Repair menu
update Repair menu on machine module

--- a/htdocs/machine/langs/fr_FR/machine.lang
+++ b/htdocs/machine/langs/fr_FR/machine.lang
@@ -1,150 +1,150 @@
 # Dolibarr language file - fr_FR - repairs
 CHARSET=UTF-8
-RepairsArea=Espace Réparations clients
-SuppliersRepairsArea=Espace réparations fournisseurs
-RepairCard=Fiche réparation
+MachinesArea=Espace Réparations clients
+SuppliersMachinesArea=Espace réparations fournisseurs
+MachineCard=Fiche réparation
 Machine=Machine
-Repairs=Réparations
-RepairLine=Ligne de réparation
-RepairFollow=Suivi
-RepairDate=prise en charge
-RepairToProcess=Réparation à traiter
-NewRepair=Nouvelle réparation
-ToRepair=Passer réparation
-SupplierRepair=Réparation fournisseur
-SuppliersRepairs=Réparations fournisseurs
-SuppliersRepairsRunning=Réparations fournisseurs en cours
-CustomerRepair=Réparation client
-CustomersRepairs=Réparations clients
-CustomersRepairsRunning=Réparations clients en cours
-CustomersRepairsAndRepairsLines=Réparations clients et lignes de réparations 
-RepairsToValid=Réparations clients à valider
-RepairsToBill=Réparations clients à facturer
-RepairsInProcess=Réparations clients en traitement
-RepairsToProcess=Réparations clients à traiter
-SuppliersRepairsToProcess=Réparations fournisseurs à traiter
+Machines=Réparations
+MachineLine=Ligne de réparation
+MachineFollow=Suivi
+MachineDate=prise en charge
+MachineToProcess=Réparation à traiter
+NewMachine=Nouvelle réparation
+ToMachine=Passer réparation
+SupplierMachine=Réparation fournisseur
+SuppliersMachines=Réparations fournisseurs
+SuppliersMachinesRunning=Réparations fournisseurs en cours
+CustomerMachine=Réparation client
+CustomersMachines=Réparations clients
+CustomersMachinesRunning=Réparations clients en cours
+CustomersMachinesAndMachinesLines=Réparations clients et lignes de réparations 
+MachinesToValid=Réparations clients à valider
+MachinesToBill=Réparations clients à facturer
+MachinesInProcess=Réparations clients en traitement
+MachinesToProcess=Réparations clients à traiter
+SuppliersMachinesToProcess=Réparations fournisseurs à traiter
 #Stats
-StatusRepairCanceledShort=Annulée
-StatusRepairDraftShort=Brouillon
-StatusRepairValidatedShort=Validée
-StatusRepairOnProcessShort=Traitement en cours
-StatusRepairSentShort=Envoi en cours
-StatusRepairSent=Envoi en cours
-StatusRepairProcessedShort=Traitée
-StatusRepairToBillShort=À facturer
-StatusRepairApprovedShort=Approuvée
-StatusRepairRefusedShort=Refusée
-StatusRepairToProcessShort=A traiter
-StatusRepairReceivedPartiallyShort=Reçu partiellement
-StatusRepairReceivedAllShort=Reçu complètement
-StatusRepairCanceled=Annulées
-StatusRepairDraft=Brouillon (à valider)
-StatusRepairValidated=Validée
-StatusRepairOnProcess=Attente réception
-StatusRepairProcessed=Traitée
-StatusRepairToBill=Réparation à facturer
-StatusRepairApproved=Approuvée
-StatusRepairRefused=Refusée
-StatusRepairReceivedPartially=Reçu partiellement
-StatusRepairReceivedAll=Reçu complètement
+StatusMachineCanceledShort=Annulée
+StatusMachineDraftShort=Brouillon
+StatusMachineValidatedShort=Validée
+StatusMachineOnProcessShort=Traitement en cours
+StatusMachineSentShort=Envoi en cours
+StatusMachineSent=Envoi en cours
+StatusMachineProcessedShort=Traitée
+StatusMachineToBillShort=À facturer
+StatusMachineApprovedShort=Approuvée
+StatusMachineRefusedShort=Refusée
+StatusMachineToProcessShort=A traiter
+StatusMachineReceivedPartiallyShort=Reçu partiellement
+StatusMachineReceivedAllShort=Reçu complètement
+StatusMachineCanceled=Annulées
+StatusMachineDraft=Brouillon (à valider)
+StatusMachineValidated=Validée
+StatusMachineOnProcess=Attente réception
+StatusMachineProcessed=Traitée
+StatusMachineToBill=Réparation à facturer
+StatusMachineApproved=Approuvée
+StatusMachineRefused=Refusée
+StatusMachineReceivedPartially=Reçu partiellement
+StatusMachineReceivedAll=Reçu complètement
 
-StatusRepairWaitingEstimateShort=Attente de devis
-StatusRepairWaitingEstimate=Attente de devis
-StatusRepairEstimatesDuringShort=Devis en cours
-StatusRepairEstimatesDuring=Devis en cours
-StatusRepairEstimatesCompleteShort=Devis Terminé
-StatusRepairEstimatesComplete=Devis Terminé
-StatusRepairEstimatesValidateShort=Devis Validé
-StatusRepairEstimatesValidate=Devis Validé
-StatusRepairAcceptedEstimateShort=Devis accepté
-StatusRepairAcceptedEstimate=Devis accepté
-StatusRepairRefusedEstimateShort=Devis refusé
-StatusRepairRefusedEstimate=Devis refusé
-StatusRepairInProgressShort=Réparation en cours
-StatusRepairInProgress=Réparation en cours
-StatusRepairCompleteShort=Réparation terminée
-StatusRepairComplete=Réparation terminée
-StatusRepairValidateShort=Réparation Validé
-StatusRepairValidate=Réparation Validé
+StatusMachineWaitingEstimateShort=Attente de devis
+StatusMachineWaitingEstimate=Attente de devis
+StatusMachineEstimatesDuringShort=Devis en cours
+StatusMachineEstimatesDuring=Devis en cours
+StatusMachineEstimatesCompleteShort=Devis Terminé
+StatusMachineEstimatesComplete=Devis Terminé
+StatusMachineEstimatesValidateShort=Devis Validé
+StatusMachineEstimatesValidate=Devis Validé
+StatusMachineAcceptedEstimateShort=Devis accepté
+StatusMachineAcceptedEstimate=Devis accepté
+StatusMachineRefusedEstimateShort=Devis refusé
+StatusMachineRefusedEstimate=Devis refusé
+StatusMachineInProgressShort=Réparation en cours
+StatusMachineInProgress=Réparation en cours
+StatusMachineCompleteShort=Réparation terminée
+StatusMachineComplete=Réparation terminée
+StatusMachineValidateShort=Réparation Validé
+StatusMachineValidate=Réparation Validé
 
-StatusWaitingRepair=Réparation à effectuer
-RepairSupport=Prise en Charge
-RepairBreakdown=Panne
-RepairGenerateCard=Fiche
-RepairAccessory=Accessoires
+StatusWaitingMachine=Réparation à effectuer
+MachineSupport=Prise en Charge
+MachineBreakdown=Panne
+MachineGenerateCard=Fiche
+MachineAccessory=Accessoires
 
-RepairCreateEstimate=Créé Devis
-RepairFinishEstimate=Terminer Devis
-RepairAccepteEstimate=Devis Accepté
-RepairRefuseEstimate=Devis Refusé
-MakeRepair=Commencer réparation
-FinishRepair=Terminer réparation
-RepairCancelEstimate=Annuler devis
+MachineCreateEstimate=Créé Devis
+MachineFinishEstimate=Terminer Devis
+MachineAccepteEstimate=Devis Accepté
+MachineRefuseEstimate=Devis Refusé
+MakeMachine=Commencer réparation
+FinishMachine=Terminer réparation
+MachineCancelEstimate=Annuler devis
 
 ShippingExist=Une expédition existe
 DraftOrWaitingApproved=Brouillon ou approuvée pas encore commandée
 DraftOrWaitingShipped=Brouillon ou validée pas encore expédiée
-SearchRepair=Rechercher une réparation
-MenuRepairsToBill=Réparations à facturer
+SearchMachine=Rechercher une réparation
+MenuMachinesToBill=Réparations à facturer
 Sending=Expédition
 Sendings=Expéditions
 ShipProduct=Expédier produit
 Discount=Remise
-CreateRepair=Créer Réparation
-RefuseRepair=Refuser la réparation
-ApproveRepair=Accepter la réparation
-ValidateRepair=Valider la réparation
-UnvalidateRepair=Dévalider la réparation
-DeleteRepair=Supprimer la Réparation
-CancelRepair=Annuler la réparation
-AddRepair=Créer Réparation
-AddToMyRepairs=Ajouter à mes réparations
-AddToOtherRepairs=Ajouter aux autres réparations
-ShowRepair=Afficher réparation
-NoOpenedRepairs=Pas de réparation brouillon
-NoOtherOpenedRepairs=Pas d'autre réparation brouillon
-OtherRepairs=Autres réparations
-LastRepairs=Les %s dernières Réparations
-LastModifiedRepairs=Les %s dernières réparations modifiées
-LastClosedRepairs=Les %s dernières réparations clôturées
-AllRepairs=Toutes les réparations
-NbOfRepairs=Nombre de réparations
-RepairsStatistics=Statistiques des réparations
-RepairsStatisticsSuppliers=Statistiques des réparations fournisseurs
-NumberOfRepairsByMonth=Nombre de réparations par mois
-AmountOfRepairsByMonthHT=Montant total de réparations par mois (HT)
-ListOfRepairs=Liste des réparations
-CloseRepair=Clôturer réparation
-ConfirmCloseRepair=Êtes-vous sûr de vouloir clôturer cette réparation ? Une fois une réparation clôturée, elle peut être facturée.
-ConfirmCloseRepairIfSending=Êtes-vous sûr de vouloir clôturer cette réparation ? Vous ne devez clôturer une réparation qu'une fois les produits expédiés.
-ConfirmDeleteRepair=Êtes-vous sûr de vouloir effacer cette réparation ?
-ConfirmValidateRepair=Êtes-vous sûr de vouloir valider cette répartion sous la référence <b>%s</b> ?
-ConfirmUnvalidateRepair=Êtes-vous sûr de vouloir restaurer la réparation <b>%s</b> au statut brouillon ?
-ConfirmCancelRepair=Êtes-vous sûr de vouloir annuler cette réparation ?
-ConfirmMakeRepair=Êtes-vous sûr de vouloir confirmer cette réparation en date du <b>%s</b> ?
+CreateMachine=Créer Réparation
+RefuseMachine=Refuser la réparation
+ApproveMachine=Accepter la réparation
+ValidateMachine=Valider la réparation
+UnvalidateMachine=Dévalider la réparation
+DeleteMachine=Supprimer la Réparation
+CancelMachine=Annuler la réparation
+AddMachine=Créer Réparation
+AddToMyMachines=Ajouter à mes réparations
+AddToOtherMachines=Ajouter aux autres réparations
+ShowMachine=Afficher réparation
+NoOpenedMachines=Pas de réparation brouillon
+NoOtherOpenedMachines=Pas d'autre réparation brouillon
+OtherMachines=Autres réparations
+LastMachines=Les %s dernières Réparations
+LastModifiedMachines=Les %s dernières réparations modifiées
+LastClosedMachines=Les %s dernières réparations clôturées
+AllMachines=Toutes les réparations
+NbOfMachines=Nombre de réparations
+MachinesStatistics=Statistiques des réparations
+MachinesStatisticsSuppliers=Statistiques des réparations fournisseurs
+NumberOfMachinesByMonth=Nombre de réparations par mois
+AmountOfMachinesByMonthHT=Montant total de réparations par mois (HT)
+ListOfMachines=Liste des réparations
+CloseMachine=Clôturer réparation
+ConfirmCloseMachine=Êtes-vous sûr de vouloir clôturer cette réparation ? Une fois une réparation clôturée, elle peut être facturée.
+ConfirmCloseMachineIfSending=Êtes-vous sûr de vouloir clôturer cette réparation ? Vous ne devez clôturer une réparation qu'une fois les produits expédiés.
+ConfirmDeleteMachine=Êtes-vous sûr de vouloir effacer cette réparation ?
+ConfirmValidateMachine=Êtes-vous sûr de vouloir valider cette répartion sous la référence <b>%s</b> ?
+ConfirmUnvalidateMachine=Êtes-vous sûr de vouloir restaurer la réparation <b>%s</b> au statut brouillon ?
+ConfirmCancelMachine=Êtes-vous sûr de vouloir annuler cette réparation ?
+ConfirmMakeMachine=Êtes-vous sûr de vouloir confirmer cette réparation en date du <b>%s</b> ?
 GenerateBill=Facturer
 ClassifyShipped=Classer délivrée
 ClassifyBilled=Classer facturée
 ComptaCard=Fiche compta
-DraftRepairs=Réparations brouillons
-RelatedRepairs=Réparations rattachées
-OnProcessRepairs=Réparations en cours de traitement
-RefRepair=Réf. réparation
-RefCustomerRepair=Réf. réparation client
-CustomerRepair=Réparation client
-RefCustomerRepairShort=Réf. com. client
-SendRepairByMail=Envoi réparation par mail
-ActionsOnRepair=Événements sur la réparation
+DraftMachines=Réparations brouillons
+RelatedMachines=Réparations rattachées
+OnProcessMachines=Réparations en cours de traitement
+RefMachine=Réf. réparation
+RefCustomerMachine=Réf. réparation client
+CustomerMachine=Réparation client
+RefCustomerMachineShort=Réf. com. client
+SendMachineByMail=Envoi réparation par mail
+ActionsOnMachine=Événements sur la réparation
 NoArticleOfTypeProduct=Pas d'article de type 'produit' et donc expédiable dans cette réparation
-RepairMode=Méthode de réparation
+MachineMode=Méthode de réparation
 AuthorRequest=Auteur/Demandeur
-UseCustomerContactAsRepairRecipientIfExist=Utiliser adresse contact suivi client si défini plutôt que adresse tiers comme destinataire des réparations
-RunningRepairs=Réparations en cours
-UserWithApproveRepairGrant=Utilisateurs habilités à approuver les réparations
-PaymentRepairRef=Paiement réparation %s
-CloneRepair=Cloner réparation
-ConfirmCloneRepair=Êtes-vous sûr de vouloir cloner cette réparation <b>%s</b> ?
-DispatchSupplierRepair=Réception de la réparation fournisseur %s
+UseCustomerContactAsMachineRecipientIfExist=Utiliser adresse contact suivi client si défini plutôt que adresse tiers comme destinataire des réparations
+RunningMachines=Réparations en cours
+UserWithApproveMachineGrant=Utilisateurs habilités à approuver les réparations
+PaymentMachineRef=Paiement réparation %s
+CloneMachine=Cloner réparation
+ConfirmCloneMachine=Êtes-vous sûr de vouloir cloner cette réparation <b>%s</b> ?
+DispatchSupplierMachine=Réception de la réparation fournisseur %s
 ##### Types de contacts #####
 TypeContact_repair_internal_SALESREPFOLL=Responsable suivi réparation client
 TypeContact_repair_internal_SHIPPING=Responsable envoi réparation client
@@ -163,41 +163,41 @@ Error_FailedToLoad_COMMANDE_SUPPLIER_ADDON_File=Échec chargement du fichier mod
 Error_FailedToLoad_COMMANDE_ADDON_File=Échec chargement du fichier module '%s'
 
 #Admin
-RepairSetup= Configuration du module Réparations
-RepairsNumberingModules= Modèles de numérotation des Réparations
-RepairsModelModule= Modèles de document des Réparations
-HideTreadedRepairs= Cacher les réparations traitées ou annulées de la liste
-ValidRepairAfterPropalClosed= Valider la réparations après la clôture de la propale, permet de ne pas passer par la réparation provisoire
-FreeLegalTextOnRepairs= Mention complémentaire sur les réparations
-WatermarkOnDraftRepairs= Filigrane sur les brouillons de réparations (aucun si vide)
+MachineSetup= Configuration du module Réparations
+MachinesNumberingModules= Modèles de numérotation des Réparations
+MachinesModelModule= Modèles de document des Réparations
+HideTreadedMachines= Cacher les réparations traitées ou annulées de la liste
+ValidMachineAfterPropalClosed= Valider la réparations après la clôture de la propale, permet de ne pas passer par la réparation provisoire
+FreeLegalTextOnMachines= Mention complémentaire sur les réparations
+WatermarkOnDraftMachines= Filigrane sur les brouillons de réparations (aucun si vide)
 
 # Sources
-RepairSource0=Proposition commerciale
-RepairSource1=Internet
-RepairSource2=Campagne courrier
-RepairSource3=Campagne téléphone
-RepairSource4=Campagne fax
-RepairSource5=Commercial
-RepairSource6=Magasin
-QtyRepaired=Qté commandée
+MachineSource0=Proposition commerciale
+MachineSource1=Internet
+MachineSource2=Campagne courrier
+MachineSource3=Campagne téléphone
+MachineSource4=Campagne fax
+MachineSource5=Commercial
+MachineSource6=Magasin
+QtyMachineed=Qté commandée
 AddDeliveryCostLine=Ajouter une ligne de frais port indiquant le poids de la réparation
 SetDemandReason=Définir l'origine de la réparation
 
 # Document models
 PDFSqueezeDescription=Modèle de réparation complet (logo...)
 PDFEdisonDescription=Modèle de réparation simple
-# Repairs modes
-RepairByMail=Courrier
-RepairByFax=Fax
-RepairByEMail=EMail
-RepairByWWW=En ligne
-RepairByPhone=Téléphone
+# Machines modes
+MachineByMail=Courrier
+MachineByFax=Fax
+MachineByEMail=EMail
+MachineByWWW=En ligne
+MachineByPhone=Téléphone
 
 #Other
 Statistics=Statistiques
-BoxLastCustomerRepairs=Dernières réparations
-BoxTitleLastCustomerRepair=Les %s dernières réparations clients modifiées
-NoRecordedRepairs=Pas de réparation client enregistrée
+BoxLastCustomerMachines=Dernières réparations
+BoxTitleLastCustomerMachine=Les %s dernières réparations clients modifiées
+NoRecordedMachines=Pas de réparation client enregistrée
 
 #Machine
 MachineTrademark=Marque
