probleme de gestion de traduction
remplacement de ("machine@machine") par ("machine") dans la
gestion des langs

--- a/htdocs/machine/langs/fr_FR/machine.lang
+++ b/htdocs/machine/langs/fr_FR/machine.lang
@@ -1,4 +1,4 @@
-# Dolibarr language file - fr_FR - repairs
+# Dolibarr language file - fr_FR - machine
 CHARSET=UTF-8
 MachinesArea=Espace Réparations clients
 SuppliersMachinesArea=Espace réparations fournisseurs
